# streamlit-pdf2img

./: .env  .env.local  .gitignore  README.md  compose.yaml
be/: Dockerfile  pyproject.toml
be/pdf2imgbe/: app.py
be/pdf2imgbe/lib/: exception.py  log.py  model.py  pdf_converter.py  statics.py
be/pdf2imgbe/resources/: DDL.sql
be/pdf2imgbe/services/: db.py
be/pdf2imgbe/tests/: conftest.py  test_db.py
fe/: Dockerfile  pyproject.toml
fe/pdf2imgfe/: app.py
fe/pdf2imgfe/.streamlit/: config.toml
fe/pdf2imgfe/app_components/: db_modal.py
fe/pdf2imgfe/lib/: io.py  log.py  statics.py
fe/pdf2imgfe/services/: convert.py
