[project]
name = "pdf2imgbe"
version = "0.1.0"
description = "API service to convert PDF to images"
authors = [{name = "Giulio Ricchelli", email = "giulioricche@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.115.8)",
    "psycopg2 (==2.9.10)",
    "pdf2image (==1.17.0)",
    "python-multipart (==0.0.20)",
    "uvicorn (==0.34.0)",
    "dotenv (==0.9.9)",
    "pytest (==8.3.4)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
